--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/button_panel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/default_margin"
+    android:columnCount="4">
 
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin"
-        android:inputType="phone" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/input_field"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnSpan="4"
+        android:layout_columnWeight="2"
+        android:layout_gravity="fill_horizontal"
         android:layout_margin="@dimen/default_margin"
         android:textSize="24sp" />
 
-    <include layout="@layout/keyboard" />
+    <TextView
+        android:id="@+id/result_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnSpan="4"
+        android:layout_columnWeight="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_margin="@dimen/default_margin"
+        android:textSize="36sp" />
 
-</LinearLayout>
+
+    <Button
+        android:id="@+id/number_one"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_one" />
+
+    <Button
+        android:id="@+id/number_two"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_two" />
+
+    <Button
+        android:id="@+id/number_three"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_three" />
+
+    <Button
+        android:id="@+id/button_divide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/pink"
+        android:text="@string/key_divide"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/number_four"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_four" />
+
+    <Button
+        android:id="@+id/number_five"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_five" />
+
+    <Button
+        android:id="@+id/number_six"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_six" />
+
+    <Button
+        android:id="@+id/button_multiply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/pink"
+        android:text="@string/key_multiply"
+        android:textColor="@color/black" />
+
+
+    <Button
+        android:id="@+id/number_seven"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_seven" />
+
+    <Button
+        android:id="@+id/number_eight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_eight" />
+
+    <Button
+        android:id="@+id/number_nine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/key_nine" />
+
+    <Button
+        android:id="@+id/button_minus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/pink"
+        android:text="@string/key_minus"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/button_clean"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/pink"
+        android:text="@string/key_clean"
+        android:textColor="@color/black" />
+
+
+    <Button
+        android:id="@+id/number_zero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnSpan="1"
+        android:layout_columnWeight="2"
+        android:layout_gravity="fill_horizontal"
+        android:text="@string/key_zero" />
+
+
+    <Button
+        android:id="@+id/button_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/pink"
+        android:text="@string/key_dot"
+        android:textColor="@color/black" />
+
+
+    <Button
+        android:id="@+id/button_plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/pink"
+        android:text="@string/key_plus"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/button_equals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnSpan="4"
+        android:layout_columnWeight="2"
+        android:layout_gravity="fill_horizontal"
+        android:backgroundTint="@color/black"
+        android:text="@string/key_equals"
+        android:textColor="@color/white" />
+
+</GridLayout>
