--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/button_panel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/default_margin"
     android:columnCount="4">
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/theme_one"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnSpan="2"
+        android:layout_columnWeight="2"
+        android:layout_gravity="fill_horizontal"
+        android:text="@string/theme_one"
+        android:fontFamily="@font/supermercado"
+        android:backgroundTint="@color/blue" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/theme_two"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnSpan="2"
+        android:layout_columnWeight="2"
+        android:layout_gravity="fill_horizontal"
+        android:text="@string/theme_one"
+        android:fontFamily="@font/supermercado"
+        android:backgroundTint="@color/grey"/>
 
     <TextView
         android:id="@+id/input_field"
@@ -16,7 +38,9 @@
         android:layout_columnWeight="2"
         android:layout_gravity="fill_horizontal"
         android:layout_margin="@dimen/default_margin"
-        android:textSize="24sp" />
+        android:gravity="end"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
+        android:textSize="36sp" />
 
     <TextView
         android:id="@+id/result_field"
@@ -26,112 +50,120 @@
         android:layout_columnWeight="2"
         android:layout_gravity="fill_horizontal"
         android:layout_margin="@dimen/default_margin"
-        android:textSize="36sp" />
+        android:gravity="end"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
+        android:textSize="48sp" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_one"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_one" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_two"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_two" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_three"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_three" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_divide"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:backgroundTint="@color/pink"
-        android:text="@string/key_divide"
-        android:textColor="@color/black" />
+        android:text="@string/key_divide" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_four"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_four" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_five"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_five" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_six"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_six" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_multiply"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:backgroundTint="@color/pink"
-        android:text="@string/key_multiply"
-        android:textColor="@color/black" />
+        android:text="@string/key_multiply" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_seven"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_seven" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_eight"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_eight" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_nine"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:text="@string/key_nine" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_minus"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:backgroundTint="@color/pink"
-        android:text="@string/key_minus"
-        android:textColor="@color/black" />
+        android:text="@string/key_minus" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_clean"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:backgroundTint="@color/pink"
-        android:text="@string/key_clean"
-        android:textColor="@color/black" />
+        android:text="@string/key_clean" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/number_zero"
+        style="@style/Button.Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnSpan="1"
@@ -140,34 +172,31 @@
         android:text="@string/key_zero" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_dot"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:backgroundTint="@color/pink"
-        android:text="@string/key_dot"
-        android:textColor="@color/black" />
+        android:text="@string/key_dot" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_plus"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:backgroundTint="@color/pink"
-        android:text="@string/key_plus"
-        android:textColor="@color/black" />
+        android:text="@string/key_plus" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_equals"
+        style="@style/Button.Operation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnSpan="4"
         android:layout_columnWeight="2"
         android:layout_gravity="fill_horizontal"
-        android:backgroundTint="@color/black"
-        android:text="@string/key_equals"
-        android:textColor="@color/white" />
+        android:text="@string/key_equals" />
 
 </GridLayout>
