--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#FFD1DC</color>
+    <color name="pink">#E485C4</color>
+    <color name="blue">#3C6CB3</color>
+    <color name="grey">#656562</color>
+    <color name="red">#F44336</color>
 </resources>
